--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,5 +15,10 @@
       "dom.iterable",
       "scripthost"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/components/AboutPage.vue" // 排除不存在的檔案
+  ]
 }
