--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
